--- a/tests/test_proxy_alone/CMakeLists.txt
+++ b/tests/test_proxy_alone/CMakeLists.txt
@@ -7,17 +7,20 @@ target_include_directories(${TARGET} PUBLIC ../test_helpers ../test_server_clien
 target_compile_features(${TARGET} PRIVATE cxx_std_17)
 target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
 
-add_test(${TARGET} ${TARGET})
-SET_TESTS_PROPERTIES(${TARGET}
-    PROPERTIES ENVIRONMENT "SSL_CERT_FILE=/usr/local/etc/openssl@1.1/cert.pem")
+# test_proxy_simple is NOT part of the ctest suite as it needs manual intervention to run
+# see comments in tp_main_simple.cpp
+
+#add_test(${TARGET} ${TARGET})
+#SET_TESTS_PROPERTIES(${TARGET}
+#    PROPERTIES ENVIRONMENT "SSL_CERT_FILE=/usr/local/etc/openssl@1.1/cert.pem")
 
 
 set(TARGET2 test_proxy_alone)
 add_executable(${TARGET2} 
 	tp_main.cpp
-	../test_proxy/tp_proxy_tests.cpp
+	tp_whiteacorn_test.cpp
+	proxy_fixture.cpp
 	../test_proxy/tp_testcase.cpp
-	../test_proxy/tp_post.cpp
 	../test_helpers/test_headers.cpp
 	# ..//test_proxy/tp_tunnel.cpp
 	# ../test_helpers/server_runner.cpp
@@ -26,7 +29,7 @@ add_executable(${TARGET2}
 	# ../test_helpers/tp_proxy_runner.cpp
 
 )
-target_include_directories(${TARGET2} PUBLIC ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
+target_include_directories(${TARGET2} PUBLIC ../test_proxy ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
 target_compile_features(${TARGET2} PRIVATE cxx_std_17)
 target_link_libraries(${TARGET2} PUBLIC marvin_library ${TEST_LINK_LIBS})
 
