hidden all references to TCPConnection and removed request.cpp/request.hpp. Now ready to swap out TCPConnection for some other class - now hidden all references in tests - think I am ready to intrdocue the new connection class

--- a/marvin/CMakeLists.txt
+++ b/marvin/CMakeLists.txt
@@ -26,7 +26,7 @@ file(GLOB HEADERS
 
 	connection/half_tunnel.hpp
 	connection/socket_factory.hpp
-	connection/tcp_connection.hpp
+	connection/connection.hpp
 	connection/timeout.hpp
 	connection/tunnel_handler.hpp
 
