--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ set(TEST_INCLUDE_DIRS
 	${HEADER_DIRS} 
 	SYSTEM ${VENDOR_DIR}/include)
 
-set(TEST_LINK_LIBS marvin_library Threads::Threads
+set(TEST_LINK_LIBS marvin_library Threads::Threads ${CMAKE_DL_LIBS}
 	${VENDOR_DIR}/lib/libcrypto.a 
 	${VENDOR_DIR}/lib/libssl.a 
 	${VENDOR_DIR}/lib/libboost_filesystem.a 
