--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,17 +13,25 @@ set(TEST_LINK_LIBS marvin_library Threads::Threads ${CMAKE_DL_LIBS}
 	${VENDOR_DIR}/lib/libcert_library.a
 	)
 
+add_subdirectory(test_doctest)
+
 add_subdirectory(test_message)
+add_subdirectory(test_message_factory)
+add_subdirectory(test_message_parser)
+
 add_subdirectory(test_headers)
+add_subdirectory(test_buffers)
+add_subdirectory(test_timeout)
+
+add_subdirectory(test_reader_mock)
+
+add_subdirectory(test_uri)
+
 add_subdirectory(test_connect)
 add_subdirectory(test_ssl)
-add_subdirectory(test_message_parser)
-add_subdirectory(test_buffers)
 # need to come back to this when socketFactory knows how to make ssl connections
 # add_subdirectory(test_connect)
 add_subdirectory(test_client_request)
-add_subdirectory(test_timeout)
-add_subdirectory(reader_test)
 add_subdirectory(test_server_client)
 add_subdirectory(test_proxy)
 add_subdirectory(test_proxy_manual)
