--- a/tests/test_buffers/CMakeLists.txt
+++ b/tests/test_buffers/CMakeLists.txt
@@ -4,7 +4,9 @@ add_executable(${TARGET}
 	test_buffers.cpp
 	test_main.cpp
 )
-set_property(TARGET ${TARGET} PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${iwyu_path})
+
+# set_property(TARGET ${TARGET} PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${iwyu_path})
+
 target_include_directories(${TARGET} PUBLIC ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
 target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
 
