--- a/tests/test_timeout/CMakeLists.txt
+++ b/tests/test_timeout/CMakeLists.txt
@@ -3,7 +3,8 @@ set(TARGET test_timeout)
 add_executable(${TARGET} 
 	timeout_main.cpp
 )
-set_property(TARGET ${TARGET} PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${iwyu_path})
+
+# set_property(TARGET ${TARGET} PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${iwyu_path})
 
 target_include_directories(${TARGET} PUBLIC ./ ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
 target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
