--- a/tests/test_message_parser/CMakeLists.txt
+++ b/tests/test_message_parser/CMakeLists.txt
@@ -2,8 +2,10 @@ file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 set(TARGET test_message_parser)
 add_executable(${TARGET} 
 	main.cpp
+	# test_set_1.cpp
 )
 target_include_directories(${TARGET} PUBLIC ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
+target_precompile_headers(${TARGET} REUSE_FROM marvin_library)
 target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
 
 add_test(${TARGET} ${TARGET})
