--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,18 +17,15 @@ set(TEST_LINK_LIBS
 	${CMAKE_DL_LIBS}
 	${DL_LIB_SO}
 	)
-
-add_subdirectory(test_doctest)
-
+set(TEST_SERVER_BASEURL "http://whiteacorn.com/utests/echo/test.php")
+add_subdirectory(test_buffers)
+add_subdirectory(test_timeout)
+add_subdirectory(test_marvin_errors)
+add_subdirectory(test_headers)
 add_subdirectory(test_message)
 add_subdirectory(test_message_factory)
 add_subdirectory(test_message_parser)
-
-add_subdirectory(test_headers)
-add_subdirectory(test_buffers)
-add_subdirectory(test_timeout)
-
-add_subdirectory(test_reader_mock)
+add_subdirectory(test_message_reader)
 
 add_subdirectory(test_uri)
 
@@ -40,3 +37,17 @@ add_subdirectory(test_client_request)
 add_subdirectory(test_server_client)
 add_subdirectory(test_proxy)
 add_subdirectory(test_proxy_manual)
+
+add_subdirectory(test_tcp)
+
+# Note have to do the add_test and set_tests_properties in the sub_directories
+
+add_subdirectory(test_server_setup_fixture)
+# add_test(server_setup server_setup)
+add_subdirectory(test_server_cleanup_fixture)
+# add_test(server_cleanup server_cleanup)
+
+# set_tests_properties(test_tcp PROPERTIES FIXTURES_REQUIRED Server)
+
+# set_tests_properties(server_setup    PROPERTIES FIXTURES_SETUP    Server)
+# set_tests_properties(server_cleanup  PROPERTIES FIXTURES_CLEANUP  Server)
