--- a/tests/test_message_factory/CMakeLists.txt
+++ b/tests/test_message_factory/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(${TARGET}
 	test_factory_main.cpp
 )
 target_include_directories(${TARGET} PUBLIC ./ ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
+target_precompile_headers(${TARGET} REUSE_FROM marvin_library)
 target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
 
 add_test(${TARGET} ${TARGET})
