--- a/tests/test_server_client/CMakeLists.txt
+++ b/tests/test_server_client/CMakeLists.txt
@@ -9,7 +9,9 @@ add_executable(${TARGET}
 	bb/bb_testcase.cpp
 	../test_helpers/server_runner.cpp
 )
+
 target_include_directories(${TARGET} PUBLIC ./ ./bb ../reader_test ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
+target_precompile_headers(${TARGET} REUSE_FROM marvin_library)
 target_compile_features(${TARGET} PRIVATE cxx_std_14)
 target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
 
@@ -30,6 +32,7 @@ add_executable(${TARGET_2}
 target_include_directories(${TARGET_2} PUBLIC ./ ./bf ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
 target_compile_features(${TARGET_2} PRIVATE cxx_std_14)
 target_link_libraries(${TARGET_2} PUBLIC marvin_library ${TEST_LINK_LIBS})
+target_precompile_headers(${TARGET_2} REUSE_FROM marvin_library)
 
 add_test(${TARGET_2} ${TARGET_2})
 SET_TESTS_PROPERTIES(${TARGET_2}
