--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,8 +23,8 @@ add_subdirectory(test_timeout)
 add_subdirectory(test_marvin_errors)
 add_subdirectory(test_headers)
 add_subdirectory(test_message)
-add_subdirectory(test_message_factory)
-add_subdirectory(test_message_parser)
+# add_subdirectory(test_message_factory)
+# add_subdirectory(test_message_parser)
 add_subdirectory(test_message_reader)
 
 add_subdirectory(test_uri)
@@ -33,8 +33,10 @@ add_subdirectory(test_connect)
 add_subdirectory(test_ssl)
 # need to come back to this when socketFactory knows how to make ssl connections
 # add_subdirectory(test_connect)
+add_subdirectory(test_request)
 add_subdirectory(test_client_request)
-add_subdirectory(test_server_client)
+add_subdirectory(test_server_client_bb)
+add_subdirectory(test_server_client_bf)
 add_subdirectory(test_proxy)
 add_subdirectory(test_proxy_manual)
 
