--- a/tests/test_request/CMakeLists.txt
+++ b/tests/test_request/CMakeLists.txt
@@ -1,17 +1,12 @@
 file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
-set(TARGET test_message)
+set(TARGET test_request)
 add_executable(${TARGET} 
 	main.cpp
-	test_fill.cpp
-	test_factory.cpp
-	test_parser.cpp
-
 )
-target_include_directories(${TARGET} PUBLIC ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
+target_include_directories(${TARGET} PUBLIC ./ ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
 target_precompile_headers(${TARGET} REUSE_FROM marvin_library)
 target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
 
-add_test(${TARGET} ${TARGET})
 add_test(${TARGET} ${TARGET})
 SET_TESTS_PROPERTIES(${TARGET}
     PROPERTIES ENVIRONMENT "SSL_CERT_FILE=/usr/local/etc/openssl@1.1/cert.pem")
