--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,6 +18,7 @@ set(TEST_LINK_LIBS
 	${DL_LIB_SO}
 	)
 set(TEST_SERVER_BASEURL "http://whiteacorn.com/utests/echo/test.php")
+add_subdirectory(test_doctest)
 add_subdirectory(test_buffers)
 add_subdirectory(test_timeout)
 add_subdirectory(test_marvin_errors)
@@ -26,6 +27,7 @@ add_subdirectory(test_message)
 # add_subdirectory(test_message_factory)
 # add_subdirectory(test_message_parser)
 add_subdirectory(test_message_reader)
+add_subdirectory(test_message_roundtrip)
 
 add_subdirectory(test_uri)
 
