--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory(test_headers)
 add_subdirectory(test_message)
 add_subdirectory(test_server_v1)
 add_subdirectory(test_server_v2)
+add_subdirectory(test_server_v3)
 # add_subdirectory(test_message_factory)
 # add_subdirectory(test_message_parser)
 add_subdirectory(test_message_reader)
