refactored test_server_v3/handler , moved to server_v3, and cleaned up some tests

--- a/tests/test_server_v3/demo1/CMakeLists.txt
+++ b/tests/test_server_v3/demo1/CMakeLists.txt
@@ -3,7 +3,10 @@ set(TARGET test_server_v3_demo_1)
 add_executable(${TARGET} 
 	../main.cpp
 	demo_1.cpp
-	../v3_handler.cpp
+	../handler.cpp
+	../handler.hpp
+	../handle_app.cpp
+	../handle_app.hpp
 	../server_v3_runner.cpp
 )
 target_include_directories(${TARGET} PUBLIC ./ ./bf ../test_helpers ../test_server_client ${TEST_INCLUDE_DIRS})
