--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,23 +8,18 @@
         "type":"pickString",
         "description": "Select the test to debug",
         "options": [
-            "test_message",
-            "test_message_reader",
-            "test_message_roundtrip",
-            "test_server_v1",
-            "test_server_v2",
-            "test_server_v3",
-            "test_headers",
+            "test_doctest/test_doctest",
+            "test_buffers/test_buffers",
+            "test_marvin_errors/test_marvin_errors",
+            "test_headers/test_headers",
+            "test_message/test_message",
+            "test_message_reader/test_message_reader",
+            "test_message_roundtrip/test_message_roundtrip",
             "test_server_v3/demo1/test_server_v3_demo_1",
             "test_server_v3/demo2/test_server_v3_demo_2",
             "test_server_v3/manual/test_server_v3_manual",
-            "test_doctest",
-            "test_client_request",
-            "test_tcp",
-            "test_marvin_errors",
-            "test_request",
-            "test_server_client_bb",
-            "test_server_client_bf"
+            "test_proxy_manual/test_proxy_manual",
+            "test_uri/test_uri"
         ],
         "default": "test_client_request"
     }],
