--- a/tests/test_ssl_server/boost_ssl_server_v2/CMakeLists.txt
+++ b/tests/test_ssl_server/boost_ssl_server_v2/CMakeLists.txt
@@ -8,7 +8,7 @@ target_include_directories(${TARGET} PUBLIC  ${TEST_INCLUDE_DIRS})
 target_precompile_headers(${TARGET} REUSE_FROM marvin_library)
 target_link_libraries(${TARGET} PUBLIC marvin_library ${TEST_LINK_LIBS})
 
-add_test(${TARGET} ${TARGET})
+# add_test(${TARGET} ${TARGET})
 
 set_target_properties(${TARGET} PROPERTIES XCODE_GENERATE_SCHEME ON)
 
